@@ -1,26 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="plone">
-
-<head>
-</head>             
-             
-<body>
-<div metal:fill-slot="main">
-
-    <h1>Hours attached to <span tal:replace="here/Title"></span></h1>
-
-    <table metal:use-macro="context/@@timereport_macros/hours_table" />
-    
-    <fieldset>
-    <legend>As plain text (for easy emailing)</legend>
-    
-    <textarea style="width: 100%" rows="15" cols="80"
-              tal:content="view/email_hours_report"></textarea>
-    </fieldset>
-    
-</div>
-
-</body>
-</html>
